# mino

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  demo.tape  index.html
.github/assets/: demo.tape
.github/workflows/: ci.yml  images.yml  release.yml
Formula/: mino.rb  minotaur.rb
assets/: index-BhZl9noQ.js  index-Cl8PZKE3.css
images/: README.md  build.sh
images/base/: Dockerfile  mino-bootstrap  mino-entrypoint
images/python/: install.sh  layer.toml
images/rust/: Dockerfile  install.sh  layer.toml
images/typescript/: Dockerfile  install.sh  layer.toml
npm/: .gitignore
npm/mino/: install.js  package.json
npm/mino-darwin-arm64/: package.json
npm/mino-darwin-x64/: package.json
npm/mino-linux-arm64/: package.json
npm/mino-linux-x64/: package.json
npm/minotaur/: install.js  package.json
npm/minotaur-darwin-arm64/: package.json
npm/minotaur-darwin-x64/: package.json
npm/minotaur-linux-arm64/: package.json
npm/minotaur-linux-x64/: package.json
scripts/: install.sh
src/: audit.rs  error.rs  home.rs  lib.rs  main.rs  network.rs  terminal.rs  version.rs
src/cache/: lockfile.rs  mod.rs  sidecar.rs  volume.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: cache.rs  completions.rs  config.rs  exec.rs  init.rs  list.rs  logs.rs  mod.rs  run.rs  setup.rs  status.rs  stop.rs
src/cli/commands/run/: cache.rs  container.rs  credentials.rs  home.rs  image.rs  mod.rs  native.rs  prompts.rs
src/cli/commands/setup/: container_linux.rs  container_macos.rs  helpers.rs  mod.rs  native_linux.rs  native_macos.rs
src/config/: mod.rs  schema.rs  toml_editor.rs  trust.rs
src/credentials/: cache.rs  gcp.rs  github.rs  mod.rs
src/creds/: aws.rs  azure.rs  cache.rs  gcp.rs  github.rs
src/layer/: compose.rs  manifest.rs  mod.rs  resolve.rs
src/orchestration/: factory.rs  mock.rs  mod.rs  native_podman.rs  orbstack.rs  orbstack_runtime.rs  podman.rs  runtime.rs
src/sandbox/: config.rs  detection.rs  dotfiles.rs  fs_copy.rs  helper.rs  helper_protocol.rs  linux.rs  macos.rs  mod.rs  native.rs  process.rs  proxy.rs  resource_limits.rs
src/session/: manager.rs  mod.rs  state.rs
src/ui/: context.rs  mod.rs  output.rs  progress.rs  prompts.rs  theme.rs
tests/: validate.sh
tests/integration/: main.rs
