[package]
name = "mino"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"
description = "Secure AI agent sandbox using rootless containers"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dean0x/mino"
repository = "https://github.com/dean0x/mino"
documentation = "https://github.com/dean0x/mino#readme"
keywords = ["sandbox", "container", "security", "ai", "podman"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Dean"]
exclude = [
    ".github/",
    "tests/",
    "*.md",
    "!README.md",
]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "signal"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
dirs = "5.0"
console = "0.15"
indicatif = "0.17"
cliclack = "0.3"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.19"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "mino"
path = "src/main.rs"
